# glsnake

./: .bzrignore  .cvsignore  .gitignore  .splintrc  .travis.yml  AUTHORS  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  SConstruct  THANKS  TODO  bootstrap  configure.ac  configure.in  format_convert.py  getmodels.sh  glsnake.6  glsnake.c  glsnake.man  glsnake.sln  glsnake.vcproj  loader.c  makefile  model.h  models.h
.github/workflows/: ci.yml
config/: .cvsignore
data/: .cvsignore  Makefile  Makefile.am  models.glsnake  snake.c
debian/: changelog  control  copyright  dirs  glsnake.6  glsnake.examples  glsnake.menu  rules
pixmaps/: Makefile.am  glsnake_ball.xpm  glsnake_h.xpm  glsnake_propeller.xpm  glsnake_snowflake.xpm
tools/: .cvsignore  Makefile  Makefile.am  format_convert.py  getmodels.sh  glsnake.converter  test_loader.c
winsetup/: COPYING.rtf  Snake Keyboard.txt  VS2003NOTES  winsetup.vdproj
