data_DATA = glsnake_ball.png glsnake_ball.xpm glsnake_h.png \
			glsnake_h.xpm glsnake_propeller.png glsnake_propeller.xpm \
			glsnake_snowflake.png glsnake_snowflake.xpm

EXTRA_DIST = glsnake_ball.png glsnake_ball.xpm glsnake_h.png \
			 glsnake_h.xpm glsnake_propeller.png glsnake_propeller.xpm \
			 glsnake_snowflake.png glsnake_snowflake.xpm
